# sle

./: LICENSE  README.md  sle.cabal  stack.yaml
lib/: Draw.hs  Percolation.hs
src/: Main.hs
