name:                sle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zhenengxie/sle#readme
license:             BSD3
license-file:        LICENSE
author:              Zheneng Xie
maintainer:          zhenengxie97@gmail.com
copyright:           2019 Zheneng Xie
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sle
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       random,
                       sle

library
  hs-source-dirs:      lib
  exposed-modules:     Draw, Percolation
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       random,
                       grid,
                       containers